Refactor dependency injection classes